--- a/src/App.css
+++ b/src/App.css
@@ -97,3 +97,14 @@ input[type=number]::-webkit-outer-spin-button {
 
 .contentRight {padding-left: 20px !important;}
 .uploadBox  h4{text-align: center;}
+
+/* Add this to fix Quagga canvas issues */
+.viewport {
+  position: relative !important;
+}
+
+.viewport canvas, .viewport video {
+  position: absolute !important;
+  left: 0 !important;
+  top: 0 !important;
+}
